--- a/style.css
+++ b/style.css
@@ -5,14 +5,10 @@
 }
 body{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #fff;
-  color: black;
+  background: url(/images/hthe_band.png) no-repeat center/cover;
+  color: white;
   font-size: 15px;
   line-height: 1.5;
-}
-a{
-  color: #262626;
-  text-decoration: none;
 }
 
 ul{
@@ -49,6 +45,8 @@ ul{
 }
 
 .main-nav ul li a{
+  color: #262626;
+  text-decoration: none;
   padding-bottom: 2px;
 }
 
@@ -60,4 +58,9 @@ ul{
 #showcase{
   width: 100%;
   height: 600px;
+}
+.about{
+  text-align: center;
+  line-height: 2em;
+  background-color: ;
 }
