Add styling to the music section

--- a/style.css
+++ b/style.css
@@ -64,3 +64,11 @@ ul{
   line-height: 2em;
   background-color: ;
 }
+
+.music{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 10px;
+  line-height: 2em;
+}
