--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ ul{
   font-size: 13px;
   background-color: #E9F5F6;
   margin: 10px;
+  /* border: 2px solid red; */
 }
 
 .main-nav .logo{
@@ -59,16 +60,27 @@ ul{
   width: 100%;
   height: 600px;
 }
+/* about */
 .about{
   text-align: center;
   line-height: 2em;
-  background-color: ;
 }
-
+/* music section */
 .music{
   display: flex;
   align-items: center;
   justify-content: space-around;
   margin-top: 10px;
   line-height: 2em;
+}
+
+/* biography page */
+.band{
+  display: flex;
+  align-items: center;
+  border: 2px solid white;
+  text-align: center;
+  line-height: 2em;
+  width: 80%;
+  margin: auto;
 }
