--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ ul{
   margin: auto;
 }
 
+
+
 /* nav bar */
 .main-nav{
   display: flex;
@@ -54,7 +56,18 @@ ul{
 .main-nav ul li a:hover{
   border-bottom: 2px solid #262626;
 }
+a:link{
+  color: #0000ff;
+}
+a:hover{
+  font-size: 20px;
+  background-color: white;
+  color:black;
+}
 
+a:visited{
+  color:chartreuse;
+}
 /* showcase */
 #showcase{
   width: 100%;
