--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ a:visited{
   justify-content: space-around;
   margin-top: 10px;
   line-height: 2em;
+  border: 1px solid #808080;
 }
 
 /* biography page */
@@ -104,4 +105,10 @@ a:visited{
 
 #kench, #mod, #skoko{
   margin-bottom: 20px;
+}
+
+.footer{
+  margin: 20px;
+  text-align: center;
+  font-size: small;
 }
