--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: url(/images/hthe_band.png) no-repeat center/cover;
+  background: url(images/hthe_band.png) no-repeat center/cover;
   
   
   color: white;
